--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   db:
-    image: postgres
+    image: postgres:14
     environment:
       - POSTGRES_PASSWORD=${SQL_PASSWORD}
     ports:
@@ -35,3 +35,5 @@ services:
       - "80:3000"
     volumes:
       - "./client:/app"
+  rabbitmq:
+    image: rabbitmq:3.9
