--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,16 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+  mongo:
+    image: mongo:5
+    # command: --serviceExecutor adaptive
+    ports:
+      - "27017:27017"
+    healthcheck:
+      test: ["CMD-SHELL", 'echo "db.getMongo()" | mongo --norc --quiet --host=mongo:27017']
+      interval: 10s
+      timeout: 5s
+      retries: 10
   api:
     build: "./api"
     ports:
@@ -19,10 +29,10 @@ services:
     volumes:
       - ./api:/app
     depends_on:
-      db:
+      mongo:
         condition: service_healthy
     environment:
-      - FLASK_RUN_HOST=db
+      - FLASK_RUN_HOST=0.0.0.0
       - FLASK_ENV=development
       - SQL_HOST
       - SQL_PORT
