--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,31 +1,44 @@
-[tool.poetry]
-name = "video-search-backend"
+[project]
+name = ""
 version = "0.1.0"
 description = ""
-authors = ["Miroslav Hrabal <mhn@email.cz>"]
+authors = [
+    {name = "Miroslav Hrabal", email = "mhn@email.cz"},
+]
+dependencies = [
+    "tensorflow",
+    "pika",
+    "Pillow",
+    "lz4",
+    "av",
+    "Flask",
+    "pymongo",
+    "click",
+]
+requires-python = ">=3.10,<3.11"
+license = {text = "MIT"}
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "~3.10"
-tensorflow = "^2.9.0"
-pika = "^1.2.1"
-Pillow = "^9.0.1"
-lz4 = "^4.0.0"
-av = "^9.2.0"
-Flask = "^2.1.2"
-pymongo = "^4.1.1"
-click = "^8.1.3"
-
-[tool.poetry.group.dev.dependencies]
-flake8 = "^4.0.1"
-autopep8 = "^1.6.0"
-black = "^22.1.0"
-pytest = "^7.1.0"
-ipython = "^8.1.1"
-isort = "^5.10.1"
-mypy = "^0.941"
-pylint = "^2.13.8"
+[project.optional-dependencies]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["pdm-pep517>=1.0.0"]
+build-backend = "pdm.pep517.api"
+
+[project.urls]
+
+[tool]
+[tool.pdm]
+[tool.pdm.dev-dependencies]
+dev = [
+    "flake8>=5.0.4",
+    "autopep8>=1.7.0",
+    "black>=22.8.0",
+    "pytest>=7.1.3",
+    "ipython>=8.5.0",
+    "isort>=5.10.1",
+    "mypy>=0.971",
+    "pylint>=2.15.3",
+    "pre-commit>=2.20.0",
+]
+[tool.isort]
+profile = "black"
