--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "Flask",
     "pymongo",
     "click",
+    "dramatiq[redis,watch]>=1.13.0",
 ]
 requires-python = ">=3.10,<3.11"
 license = {text = "MIT"}
