--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,20 @@ services:
     ports:
       - "27017:27017"
     healthcheck:
-      test: ["CMD-SHELL", 'echo "db.getMongo()" | mongo --norc --quiet --host=mongo:27017']
+      test: ["CMD-SHELL", 'echo "db.getMongo()" | mongosh --norc --quiet --host=mongo:27017']
       interval: 10s
       timeout: 5s
-      retries: 10
+      retries: 20
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
+    command: --save ""
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 20
   api:
     build: "./backend"
     ports:
@@ -17,6 +27,8 @@ services:
       - ./backend/api:/app
     depends_on:
       mongo:
+        condition: service_healthy
+      redis:
         condition: service_healthy
     environment:
       - FLASK_RUN_HOST=0.0.0.0
