--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,8 @@ services:
     ports:
       - "8080:5000"
     volumes:
-      - ./backend/api:/app
+      - ./backend/:/app
+      - backendvenv:/app/.venv
     depends_on:
       mongo:
         condition: service_healthy
@@ -44,3 +45,5 @@ services:
       - "80:3000"
     volumes:
       - "./client:/app"
+volumes:
+  backendvenv:
