--- a/backend/requirements-dev.txt
+++ b/backend/requirements-dev.txt
@@ -2,6 +2,7 @@ absl-py==1.2.0
 astroid==2.12.10
 asttokens==2.0.8
 astunparse==1.6.3
+async-timeout==4.0.2
 attrs==22.1.0
 autopep8==1.7.0
 av==9.2.0
@@ -13,17 +14,21 @@ cfgv==3.3.1
 charset-normalizer==2.1.1
 click==8.1.3
 decorator==5.1.1
+deprecated==1.2.13
 dill==0.3.5.1
 distlib==0.3.6
+dramatiq==1.13.0
 executing==1.0.0
 filelock==3.8.0
 flake8==5.0.4
 Flask==2.2.2
 flatbuffers==2.0.7
 gast==0.4.0
+gevent==21.12.0
 google-auth==2.11.1
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
+greenlet==1.1.3
 grpcio==1.49.1
 h5py==3.7.0
 identify==2.5.5
@@ -59,6 +64,7 @@ Pillow==9.2.0
 platformdirs==2.5.2
 pluggy==1.0.0
 pre-commit==2.20.0
+prometheus-client==0.14.1
 prompt-toolkit==3.0.31
 protobuf==3.19.5
 ptyprocess==0.7.0
@@ -74,6 +80,7 @@ pymongo==4.2.0
 pyparsing==3.0.9
 pytest==7.1.3
 pyyaml==6.0
+redis==4.3.4
 requests==2.28.1
 requests-oauthlib==1.3.1
 rsa==4.9
@@ -94,7 +101,11 @@ traitlets==5.4.0
 typing-extensions==4.3.0
 urllib3==1.26.12
 virtualenv==20.16.5
+watchdog==2.1.9
+watchdog-gevent==0.1.1
 wcwidth==0.2.5
 Werkzeug==2.2.2
 wheel==0.37.1
 wrapt==1.14.1
+zope.event==4.5.0
+zope.interface==5.4.0
