--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,21 @@
 absl-py==1.2.0
 astunparse==1.6.3
+async-timeout==4.0.2
 av==9.2.0
 cachetools==5.2.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
+deprecated==1.2.13
+dramatiq==1.13.0
 Flask==2.2.2
 flatbuffers==2.0.7
 gast==0.4.0
+gevent==21.12.0
 google-auth==2.11.1
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
+greenlet==1.1.3
 grpcio==1.49.1
 h5py==3.7.0
 idna==3.4
@@ -28,11 +33,13 @@ opt-einsum==3.3.0
 packaging==21.3
 pika==1.3.0
 Pillow==9.2.0
+prometheus-client==0.14.1
 protobuf==3.19.5
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pymongo==4.2.0
 pyparsing==3.0.9
+redis==4.3.4
 requests==2.28.1
 requests-oauthlib==1.3.1
 rsa==4.9
@@ -47,6 +54,10 @@ tensorflow-io-gcs-filesystem==0.27.0
 termcolor==2.0.1
 typing-extensions==4.3.0
 urllib3==1.26.12
+watchdog==2.1.9
+watchdog-gevent==0.1.1
 Werkzeug==2.2.2
 wheel==0.37.1
 wrapt==1.14.1
+zope.event==4.5.0
+zope.interface==5.4.0
