--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -41,5 +41,7 @@ dev = [
     "pylint>=2.15.3",
     "pre-commit>=2.20.0",
 ]
+[tool.pdm.scripts]
+api = "pdm run python app.py api"
 [tool.isort]
 profile = "black"
