--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
         condition: service_healthy
     environment:
       - FLASK_RUN_HOST=0.0.0.0
-      - FLASK_ENV=development
+      - FLASK_DEBUG=1
       - SQL_HOST
       - SQL_PORT
       - SQL_USER
