--- a/backend/requirements-dev.txt
+++ b/backend/requirements-dev.txt
@@ -48,6 +48,7 @@ markdown==3.4.1
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.6
 mccabe==0.7.0
+more-itertools==8.14.0
 mypy==0.971
 mypy-extensions==0.4.3
 nodeenv==1.7.0
