--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -27,6 +27,7 @@ libclang==14.0.6
 lz4==4.0.2
 markdown==3.4.1
 MarkupSafe==2.1.1
+more-itertools==8.14.0
 numpy==1.23.3
 oauthlib==3.2.1
 opt-einsum==3.3.0
