--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "click",
     "dramatiq[redis,watch]>=1.13.0",
     "more-itertools>=8.14.0",
+    "toolz>=0.12.0",
 ]
 requires-python = ">=3.10,<3.11"
 license = {text = "MIT"}
