--- a/backend/requirements-dev.txt
+++ b/backend/requirements-dev.txt
@@ -98,6 +98,7 @@ termcolor==2.0.1
 toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.4
+toolz==0.12.0
 traitlets==5.4.0
 typing-extensions==4.3.0
 urllib3==1.26.12
