--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -53,6 +53,7 @@ tensorflow==2.10.0
 tensorflow-estimator==2.10.0
 tensorflow-io-gcs-filesystem==0.27.0
 termcolor==2.0.1
+toolz==0.12.0
 typing-extensions==4.3.0
 urllib3==1.26.12
 watchdog==2.1.9
