--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,10 @@ dependencies = [
     "dramatiq[redis,watch]>=1.13.0",
     "more-itertools>=8.14.0",
     "toolz>=0.12.0",
+    "transformers>=4.22.2",
+    "torch>=1.12.1",
+    "torchaudio>=0.12.1",
+    "torchvision>=0.13.1",
 ]
 requires-python = ">=3.10,<3.11"
 license = {text = "MIT"}
