--- a/backend/requirements-dev.txt
+++ b/backend/requirements-dev.txt
@@ -31,6 +31,7 @@ google-pasta==0.2.0
 greenlet==1.1.3
 grpcio==1.49.1
 h5py==3.7.0
+huggingface-hub==0.10.0
 identify==2.5.5
 idna==3.4
 iniconfig==1.1.1
@@ -61,7 +62,7 @@ pathspec==0.10.1
 pexpect==4.8.0
 pickleshare==0.7.5
 pika==1.3.0
-Pillow==9.2.0
+pillow==9.2.0
 platformdirs==2.5.2
 pluggy==1.0.0
 pre-commit==2.20.0
@@ -82,6 +83,7 @@ pyparsing==3.0.9
 pytest==7.1.3
 pyyaml==6.0
 redis==4.3.4
+regex==2022.9.13
 requests==2.28.1
 requests-oauthlib==1.3.1
 rsa==4.9
@@ -95,11 +97,17 @@ tensorflow==2.10.0
 tensorflow-estimator==2.10.0
 tensorflow-io-gcs-filesystem==0.27.0
 termcolor==2.0.1
+tokenizers==0.12.1
 toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.4
 toolz==0.12.0
+torch==1.12.1
+torchaudio==0.12.1
+torchvision==0.13.1
+tqdm==4.64.1
 traitlets==5.4.0
+transformers==4.22.2
 typing-extensions==4.3.0
 urllib3==1.26.12
 virtualenv==20.16.5
