--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ charset-normalizer==2.1.1
 click==8.1.3
 deprecated==1.2.13
 dramatiq==1.13.0
+filelock==3.8.0
 Flask==2.2.2
 flatbuffers==2.0.7
 gast==0.4.0
@@ -18,6 +19,7 @@ google-pasta==0.2.0
 greenlet==1.1.3
 grpcio==1.49.1
 h5py==3.7.0
+huggingface-hub==0.10.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -33,14 +35,16 @@ oauthlib==3.2.1
 opt-einsum==3.3.0
 packaging==21.3
 pika==1.3.0
-Pillow==9.2.0
+pillow==9.2.0
 prometheus-client==0.14.1
 protobuf==3.19.5
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pymongo==4.2.0
 pyparsing==3.0.9
+pyyaml==6.0
 redis==4.3.4
+regex==2022.9.13
 requests==2.28.1
 requests-oauthlib==1.3.1
 rsa==4.9
@@ -53,7 +57,13 @@ tensorflow==2.10.0
 tensorflow-estimator==2.10.0
 tensorflow-io-gcs-filesystem==0.27.0
 termcolor==2.0.1
+tokenizers==0.12.1
 toolz==0.12.0
+torch==1.12.1
+torchaudio==0.12.1
+torchvision==0.13.1
+tqdm==4.64.1
+transformers==4.22.2
 typing-extensions==4.3.0
 urllib3==1.26.12
 watchdog==2.1.9
