--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "torch>=1.12.1",
     "torchaudio>=0.12.1",
     "torchvision>=0.13.1",
+    "pydantic>=1.10.2",
 ]
 requires-python = ">=3.10,<3.11"
 license = {text = "MIT"}
