--- a/backend/requirements-dev.txt
+++ b/backend/requirements-dev.txt
@@ -75,6 +75,7 @@ py==1.11.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.9.1
+pydantic==1.10.2
 pyflakes==2.5.0
 pygments==2.13.0
 pylint==2.15.3
