--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -40,6 +40,7 @@ prometheus-client==0.14.1
 protobuf==3.19.5
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pydantic==1.10.2
 pymongo==4.2.0
 pyparsing==3.0.9
 pyyaml==6.0
