--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "torchaudio>=0.12.1",
     "torchvision>=0.13.1",
     "pydantic>=1.10.2",
+    "simple-file-checksum>=1.2.2",
 ]
 requires-python = ">=3.10,<3.11"
 license = {text = "MIT"}
