--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -50,6 +50,7 @@ requests==2.28.1
 requests-oauthlib==1.3.1
 rsa==4.9
 setuptools==65.4.0
+simple-file-checksum==1.2.2
 six==1.16.0
 tensorboard==2.10.0
 tensorboard-data-server==0.6.1
