--- a/backend/requirements-dev.txt
+++ b/backend/requirements-dev.txt
@@ -99,6 +99,7 @@ tensorflow==2.10.0
 tensorflow-estimator==2.10.0
 tensorflow-io-gcs-filesystem==0.27.0
 termcolor==2.0.1
+timm==0.6.11
 tokenizers==0.12.1
 toml==0.10.2
 tomli==2.0.1
