--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -60,6 +60,7 @@ tensorflow==2.10.0
 tensorflow-estimator==2.10.0
 tensorflow-io-gcs-filesystem==0.27.0
 termcolor==2.0.1
+timm==0.6.11
 tokenizers==0.12.1
 toolz==0.12.0
 torch==1.12.1
