--- a/backend/requirements-dev.txt
+++ b/backend/requirements-dev.txt
@@ -1,4 +1,6 @@
 absl-py==1.2.0
+aiohttp==3.8.3
+aiosignal==1.2.0
 astroid==2.12.10
 asttokens==2.0.8
 astunparse==1.6.3
@@ -13,6 +15,7 @@ certifi==2022.9.24
 cfgv==3.3.1
 charset-normalizer==2.1.1
 click==8.1.3
+datasets==2.6.1
 decorator==5.1.1
 deprecated==1.2.13
 dill==0.3.5.1
@@ -23,6 +26,8 @@ filelock==3.8.0
 flake8==5.0.4
 Flask==2.2.2
 flatbuffers==2.0.7
+frozenlist==1.3.1
+fsspec==2022.10.0
 gast==0.4.0
 gevent==21.12.0
 google-auth==2.11.1
@@ -50,6 +55,8 @@ MarkupSafe==2.1.1
 matplotlib-inline==0.1.6
 mccabe==0.7.0
 more-itertools==8.14.0
+multidict==6.0.2
+multiprocess==0.70.13
 mypy==0.971
 mypy-extensions==0.4.3
 nodeenv==1.7.0
@@ -57,6 +64,7 @@ numpy==1.23.3
 oauthlib==3.2.1
 opt-einsum==3.3.0
 packaging==21.3
+pandas==1.5.1
 parso==0.8.3
 pathspec==0.10.1
 pexpect==4.8.0
@@ -72,6 +80,7 @@ protobuf==3.19.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 py==1.11.0
+pyarrow==9.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.9.1
@@ -82,11 +91,14 @@ pylint==2.15.3
 pymongo==4.2.0
 pyparsing==3.0.9
 pytest==7.1.3
+python-dateutil==2.8.2
+pytz==2022.5
 pyyaml==6.0
 redis==4.3.4
 regex==2022.9.13
 requests==2.28.1
 requests-oauthlib==1.3.1
+responses==0.18.0
 rsa==4.9
 setuptools==65.4.0
 simple-file-checksum==1.2.2
@@ -120,5 +132,7 @@ wcwidth==0.2.5
 Werkzeug==2.2.2
 wheel==0.37.1
 wrapt==1.14.1
+xxhash==3.1.0
+yarl==1.8.1
 zope.event==4.5.0
 zope.interface==5.4.0
