--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,6 @@
 absl-py==1.2.0
+aiohttp==3.8.3
+aiosignal==1.2.0
 astunparse==1.6.3
 async-timeout==4.0.2
 attrs==22.1.0
@@ -7,11 +9,15 @@ cachetools==5.2.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
+datasets==2.6.1
 deprecated==1.2.13
+dill==0.3.5.1
 dramatiq==1.13.0
 filelock==3.8.0
 Flask==2.2.2
 flatbuffers==2.0.7
+frozenlist==1.3.1
+fsspec==2022.10.0
 gast==0.4.0
 gevent==21.12.0
 google-auth==2.11.1
@@ -31,24 +37,31 @@ lz4==4.0.2
 markdown==3.4.1
 MarkupSafe==2.1.1
 more-itertools==8.14.0
+multidict==6.0.2
+multiprocess==0.70.13
 numpy==1.23.3
 oauthlib==3.2.1
 opt-einsum==3.3.0
 packaging==21.3
+pandas==1.5.1
 pika==1.3.0
 pillow==9.2.0
 prometheus-client==0.14.1
 protobuf==3.19.5
+pyarrow==9.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pydantic==1.10.2
 pymongo==4.2.0
 pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.5
 pyyaml==6.0
 redis==4.3.4
 regex==2022.9.13
 requests==2.28.1
 requests-oauthlib==1.3.1
+responses==0.18.0
 rsa==4.9
 setuptools==65.4.0
 simple-file-checksum==1.2.2
@@ -75,5 +88,7 @@ watchdog-gevent==0.1.1
 Werkzeug==2.2.2
 wheel==0.37.1
 wrapt==1.14.1
+xxhash==3.1.0
+yarl==1.8.1
 zope.event==4.5.0
 zope.interface==5.4.0
