--- a/backend/requirements-dev.txt
+++ b/backend/requirements-dev.txt
@@ -103,6 +103,7 @@ rsa==4.9
 setuptools==65.4.0
 simple-file-checksum==1.2.2
 six==1.16.0
+sortedcontainers==2.4.0
 stack-data==0.5.0
 tensorboard==2.10.0
 tensorboard-data-server==0.6.1
