--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -66,6 +66,7 @@ rsa==4.9
 setuptools==65.4.0
 simple-file-checksum==1.2.2
 six==1.16.0
+sortedcontainers==2.4.0
 tensorboard==2.10.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
