Add development mount binds

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
       - "8080:5000"
     volumes:
       - ./backend/:/app
+      - ./.test_data:/.test_data
+      - kerasmodels:/root/.keras
       - backendvenv:/app/.venv
     depends_on:
       mongo:
@@ -47,3 +49,4 @@ services:
       - "./client:/app"
 volumes:
   backendvenv:
+  kerasmodels:
