--- a/backend/requirements-dev.txt
+++ b/backend/requirements-dev.txt
@@ -1,6 +1,7 @@
 absl-py==1.2.0
 aiohttp==3.8.3
 aiosignal==1.2.0
+aniso8601==9.0.1
 astroid==2.12.10
 asttokens==2.0.8
 astunparse==1.6.3
@@ -25,6 +26,7 @@ executing==1.0.0
 filelock==3.8.0
 flake8==5.0.4
 Flask==2.2.2
+flask-restx==1.0.3
 flatbuffers==2.0.7
 frozenlist==1.3.1
 fsspec==2022.10.0
@@ -45,6 +47,7 @@ isort==5.10.1
 itsdangerous==2.1.2
 jedi==0.18.1
 Jinja2==3.1.2
+jsonschema==4.17.3
 keras==2.10.0
 keras-preprocessing==1.1.2
 lazy-object-proxy==1.7.1
@@ -90,6 +93,7 @@ pygments==2.13.0
 pylint==2.15.3
 pymongo==4.2.0
 pyparsing==3.0.9
+pyrsistent==0.19.2
 pytest==7.1.3
 python-dateutil==2.8.2
 pytz==2022.5
@@ -130,7 +134,7 @@ virtualenv==20.16.5
 watchdog==2.1.9
 watchdog-gevent==0.1.1
 wcwidth==0.2.5
-Werkzeug==2.2.2
+werkzeug==2.2.2
 wheel==0.37.1
 wrapt==1.14.1
 xxhash==3.1.0
