--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 absl-py==1.2.0
 aiohttp==3.8.3
 aiosignal==1.2.0
+aniso8601==9.0.1
 astunparse==1.6.3
 async-timeout==4.0.2
 attrs==22.1.0
@@ -15,6 +16,7 @@ dill==0.3.5.1
 dramatiq==1.13.0
 filelock==3.8.0
 Flask==2.2.2
+flask-restx==1.0.3
 flatbuffers==2.0.7
 frozenlist==1.3.1
 fsspec==2022.10.0
@@ -30,6 +32,7 @@ huggingface-hub==0.10.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsonschema==4.17.3
 keras==2.10.0
 keras-preprocessing==1.1.2
 libclang==14.0.6
@@ -54,6 +57,7 @@ pyasn1-modules==0.2.8
 pydantic==1.10.2
 pymongo==4.2.0
 pyparsing==3.0.9
+pyrsistent==0.19.2
 python-dateutil==2.8.2
 pytz==2022.5
 pyyaml==6.0
@@ -86,7 +90,7 @@ typing-extensions==4.3.0
 urllib3==1.26.12
 watchdog==2.1.9
 watchdog-gevent==0.1.1
-Werkzeug==2.2.2
+werkzeug==2.2.2
 wheel==0.37.1
 wrapt==1.14.1
 xxhash==3.1.0
