--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -55,6 +55,6 @@ dev = [
     "pre-commit>=2.20.0",
 ]
 [tool.pdm.scripts]
-api = "pdm run python app.py api"
+api = "pdm run python backend/app.py api"
 [tool.isort]
 profile = "black"
