Update Python packages

--- a/backend/requirements-dev.txt
+++ b/backend/requirements-dev.txt
@@ -2,31 +2,33 @@ absl-py==1.2.0
 aiohttp==3.8.3
 aiosignal==1.2.0
 aniso8601==9.0.1
-astroid==2.12.10
+astroid==2.13.3
 asttokens==2.0.8
 astunparse==1.6.3
 async-timeout==4.0.2
-attrs==22.1.0
-autopep8==1.7.0
-av==9.2.0
+attrs==22.2.0
+autopep8==2.0.1
+av==10.0.0
 backcall==0.2.0
-black==22.8.0
+black==22.12.0
 cachetools==5.2.0
 certifi==2022.9.24
 cfgv==3.3.1
 charset-normalizer==2.1.1
 click==8.1.3
-datasets==2.6.1
+datasets==2.9.0
 decorator==5.1.1
 deprecated==1.2.13
 dill==0.3.5.1
 distlib==0.3.6
+dnspython==2.3.0
 dramatiq==1.13.0
+exceptiongroup==1.1.0
 executing==1.0.0
 filelock==3.8.0
-flake8==5.0.4
+flake8==6.0.0
 Flask==2.2.2
-flask-restx==1.0.3
+flask-restx==1.0.5
 flatbuffers==2.0.7
 frozenlist==1.3.1
 fsspec==2022.10.0
@@ -38,32 +40,35 @@ google-pasta==0.2.0
 greenlet==1.1.3
 grpcio==1.49.1
 h5py==3.7.0
-huggingface-hub==0.10.0
+huggingface-hub==0.12.0
 identify==2.5.5
 idna==3.4
 iniconfig==1.1.1
-ipython==8.5.0
-isort==5.10.1
+ipython==8.9.0
+isort==5.12.0
 itsdangerous==2.1.2
 jedi==0.18.1
 Jinja2==3.1.2
 jsonschema==4.17.3
-keras==2.10.0
-keras-preprocessing==1.1.2
+keras==2.11.0
 lazy-object-proxy==1.7.1
 libclang==14.0.6
-lz4==4.0.2
+lz4==4.3.2
 markdown==3.4.1
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.6
 mccabe==0.7.0
-more-itertools==8.14.0
+more-itertools==9.0.0
 multidict==6.0.2
 multiprocess==0.70.13
-mypy==0.971
+mypy==0.991
 mypy-extensions==0.4.3
 nodeenv==1.7.0
 numpy==1.23.3
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
 oauthlib==3.2.1
 opt-einsum==3.3.0
 packaging==21.3
@@ -72,29 +77,28 @@ parso==0.8.3
 pathspec==0.10.1
 pexpect==4.8.0
 pickleshare==0.7.5
-pika==1.3.0
-pillow==9.2.0
+pika==1.3.1
+pillow==9.4.0
 platformdirs==2.5.2
 pluggy==1.0.0
-pre-commit==2.20.0
+pre-commit==3.0.2
 prometheus-client==0.14.1
 prompt-toolkit==3.0.31
 protobuf==3.19.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
-py==1.11.0
 pyarrow==9.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycodestyle==2.9.1
-pydantic==1.10.2
-pyflakes==2.5.0
+pycodestyle==2.10.0
+pydantic==1.10.4
+pyflakes==3.0.1
 pygments==2.13.0
-pylint==2.15.3
-pymongo==4.2.0
+pylint==2.15.10
+pymongo==4.3.3
 pyparsing==3.0.9
 pyrsistent==0.19.2
-pytest==7.1.3
+pytest==7.2.1
 python-dateutil==2.8.2
 pytz==2022.5
 pyyaml==6.0
@@ -109,32 +113,31 @@ simple-file-checksum==1.2.2
 six==1.16.0
 sortedcontainers==2.4.0
 stack-data==0.5.0
-tensorboard==2.10.0
+tensorboard==2.11.2
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.10.0
-tensorflow-estimator==2.10.0
+tensorflow==2.11.0
+tensorflow-estimator==2.11.0
 tensorflow-io-gcs-filesystem==0.27.0
 termcolor==2.0.1
-timm==0.6.11
+timm==0.6.12
 tokenizers==0.12.1
-toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.4
 toolz==0.12.0
-torch==1.12.1
-torchaudio==0.12.1
-torchvision==0.13.1
+torch==1.13.1
+torchaudio==0.13.1
+torchvision==0.14.1
 tqdm==4.64.1
 traitlets==5.4.0
-transformers==4.22.2
+transformers==4.26.0
 typing-extensions==4.3.0
 urllib3==1.26.12
 virtualenv==20.16.5
 watchdog==2.1.9
 watchdog-gevent==0.1.1
 wcwidth==0.2.5
-werkzeug==2.2.2
+Werkzeug==2.2.2
 wheel==0.37.1
 wrapt==1.14.1
 xxhash==3.1.0
