--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,14 +6,14 @@ authors = [
     {name = "Miroslav Hrabal", email = "mhn@email.cz"},
 ]
 dependencies = [
-    "tensorflow",
-    "pika",
-    "Pillow",
-    "lz4",
-    "av",
-    "Flask",
-    "pymongo",
-    "click",
+    "tensorflow>=2.10.0",
+    "pika>=1.3.0",
+    "Pillow>=9.2.0",
+    "lz4>=4.2.0",
+    "av>=9.2.0",
+    "Flask>=2.2.0",
+    "pymongo>=4.2.0",
+    "click>=8.1.3",
     "dramatiq[redis,watch]>=1.13.0",
     "more-itertools>=8.14.0",
     "toolz>=0.12.0",
