--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,19 +4,20 @@ aiosignal==1.2.0
 aniso8601==9.0.1
 astunparse==1.6.3
 async-timeout==4.0.2
-attrs==22.1.0
-av==9.2.0
+attrs==22.2.0
+av==10.0.0
 cachetools==5.2.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
-datasets==2.6.1
+datasets==2.9.0
 deprecated==1.2.13
 dill==0.3.5.1
+dnspython==2.3.0
 dramatiq==1.13.0
 filelock==3.8.0
 Flask==2.2.2
-flask-restx==1.0.3
+flask-restx==1.0.5
 flatbuffers==2.0.7
 frozenlist==1.3.1
 fsspec==2022.10.0
@@ -28,34 +29,37 @@ google-pasta==0.2.0
 greenlet==1.1.3
 grpcio==1.49.1
 h5py==3.7.0
-huggingface-hub==0.10.0
+huggingface-hub==0.12.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jsonschema==4.17.3
-keras==2.10.0
-keras-preprocessing==1.1.2
+keras==2.11.0
 libclang==14.0.6
-lz4==4.0.2
+lz4==4.3.2
 markdown==3.4.1
 MarkupSafe==2.1.1
-more-itertools==8.14.0
+more-itertools==9.0.0
 multidict==6.0.2
 multiprocess==0.70.13
 numpy==1.23.3
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
 oauthlib==3.2.1
 opt-einsum==3.3.0
 packaging==21.3
 pandas==1.5.1
-pika==1.3.0
-pillow==9.2.0
+pika==1.3.1
+pillow==9.4.0
 prometheus-client==0.14.1
 protobuf==3.19.5
 pyarrow==9.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pydantic==1.10.2
-pymongo==4.2.0
+pydantic==1.10.4
+pymongo==4.3.3
 pyparsing==3.0.9
 pyrsistent==0.19.2
 python-dateutil==2.8.2
@@ -71,26 +75,26 @@ setuptools==65.4.0
 simple-file-checksum==1.2.2
 six==1.16.0
 sortedcontainers==2.4.0
-tensorboard==2.10.0
+tensorboard==2.11.2
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.10.0
-tensorflow-estimator==2.10.0
+tensorflow==2.11.0
+tensorflow-estimator==2.11.0
 tensorflow-io-gcs-filesystem==0.27.0
 termcolor==2.0.1
-timm==0.6.11
+timm==0.6.12
 tokenizers==0.12.1
 toolz==0.12.0
-torch==1.12.1
-torchaudio==0.12.1
-torchvision==0.13.1
+torch==1.13.1
+torchaudio==0.13.1
+torchvision==0.14.1
 tqdm==4.64.1
-transformers==4.22.2
+transformers==4.26.0
 typing-extensions==4.3.0
 urllib3==1.26.12
 watchdog==2.1.9
 watchdog-gevent==0.1.1
-werkzeug==2.2.2
+Werkzeug==2.2.2
 wheel==0.37.1
 wrapt==1.14.1
 xxhash==3.1.0
