--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,9 @@
     "ajv": "^6.12.6",
     "axios": "^0.24.0",
     "history": "^5.1.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.2",
+    "prettier": "^2.8.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
@@ -47,5 +50,15 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://api:5000"
+  "proxy": "http://api:5000",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+	  "src/**/*.{js,jsx,ts,tsx,json,css,scss}": [
+	"prettier --write"
+	]
+  }
 }
