--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "history": "^5.1.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
+    "lodash": "^4.17.21",
     "prettier": "^2.8.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -57,8 +58,11 @@
     }
   },
   "lint-staged": {
-	  "src/**/*.{js,jsx,ts,tsx,json,css,scss}": [
-	"prettier --write"
-	]
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss}": [
+      "prettier --write"
+    ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.191"
   }
 }
