--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,6 @@
     "axios": "^0.24.0",
     "history": "^5.1.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.1.2",
     "lodash": "^4.17.21",
     "prettier": "^2.8.4",
     "react": "^17.0.2",
@@ -64,6 +63,7 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.191"
+    "@types/lodash": "^4.14.191",
+    "lint-staged": "^13.1.2"
   }
 }
