--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,7 @@
     "ajv": "^6.12.6",
     "axios": "^0.24.0",
     "history": "^5.1.0",
-    "husky": "^8.0.3",
     "lodash": "^4.17.21",
-    "prettier": "^2.8.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
@@ -52,11 +50,6 @@
     ]
   },
   "proxy": "http://api:5000",
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss}": [
       "prettier --write"
@@ -64,6 +57,8 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
-    "lint-staged": "^13.1.2"
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.2",
+    "prettier": "^2.8.4"
   }
 }
