--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "datasets>=2.6.1",
     "sortedcontainers>=2.4.0",
     "flask-restx>=1.0.3",
+    "pyzstd>=0.15.4",
 ]
 requires-python = ">=3.10,<3.11"
 license = {text = "MIT"}
