--- a/backend/requirements-dev.txt
+++ b/backend/requirements-dev.txt
@@ -102,6 +102,7 @@ pytest==7.2.1
 python-dateutil==2.8.2
 pytz==2022.5
 pyyaml==6.0
+pyzstd==0.15.4
 redis==4.3.4
 regex==2022.9.13
 requests==2.28.1
