--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -65,6 +65,7 @@ pyrsistent==0.19.2
 python-dateutil==2.8.2
 pytz==2022.5
 pyyaml==6.0
+pyzstd==0.15.4
 redis==4.3.4
 regex==2022.9.13
 requests==2.28.1
