--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "sortedcontainers>=2.4.0",
     "flask-restx>=1.0.3",
     "pyzstd>=0.15.4",
+    "periodiq>=0.12.1",
 ]
 requires-python = ">=3.10,<3.11"
 license = {text = "MIT"}
