--- a/backend/requirements-dev.txt
+++ b/backend/requirements-dev.txt
@@ -75,6 +75,8 @@ packaging==21.3
 pandas==1.5.1
 parso==0.8.3
 pathspec==0.10.1
+pendulum==2.1.2
+periodiq==0.12.1
 pexpect==4.8.0
 pickleshare==0.7.5
 pika==1.3.1
@@ -101,6 +103,7 @@ pyrsistent==0.19.2
 pytest==7.2.1
 python-dateutil==2.8.2
 pytz==2022.5
+pytzdata==2020.1
 pyyaml==6.0
 pyzstd==0.15.4
 redis==4.3.4
