--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -51,6 +51,8 @@ oauthlib==3.2.1
 opt-einsum==3.3.0
 packaging==21.3
 pandas==1.5.1
+pendulum==2.1.2
+periodiq==0.12.1
 pika==1.3.1
 pillow==9.4.0
 prometheus-client==0.14.1
@@ -64,6 +66,7 @@ pyparsing==3.0.9
 pyrsistent==0.19.2
 python-dateutil==2.8.2
 pytz==2022.5
+pytzdata==2020.1
 pyyaml==6.0
 pyzstd==0.15.4
 redis==4.3.4
