--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,20 @@ services:
       resources:
         limits:
           memory: 2G
+  periodiq:  # periodic tasks scheduler
+    build: "./backend"
+    volumes:
+      - ./backend/backend:/app/backend
+      - ./backend/scripts:/app/scripts
+      - ./backend/tests:/app/tests
+    environment:
+      - REDIS_URL=redis://redis
+    command: pdm run periodiq backend.tasks:redis_broker backend.tasks.periodic
+    restart: always
+    deploy:
+      resources:
+        limits:
+          memory: 512M
   ml_worker_cpu:
     build: "./backend"
     environment:
