fix: load periodic actors by default worker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,7 +61,7 @@ services:
       - SQL_PASSWORD
       - SQL_DB
       - REDIS_URL=redis://redis
-    command: pdm run dramatiq -p 1 -t 1 backend.tasks:redis_broker backend.tasks.default -Q default --watch .
+    command: pdm run dramatiq -p 1 -t 1 backend.tasks:redis_broker backend.tasks.default backend.tasks.periodic -Q default --watch .
     restart: always
     deploy:
       resources:
