chore: install apscheduler

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "flask-restx>=1.0.3",
     "pyzstd>=0.15.4",
     "periodiq>=0.12.1",
+    "apscheduler>=3.10.0",
 ]
 requires-python = ">=3.10,<3.11"
 license = {text = "MIT"}
