--- a/backend/requirements-dev.txt
+++ b/backend/requirements-dev.txt
@@ -2,6 +2,7 @@ absl-py==1.2.0
 aiohttp==3.8.3
 aiosignal==1.2.0
 aniso8601==9.0.1
+apscheduler==3.10.0
 astroid==2.13.3
 asttokens==2.0.8
 astunparse==1.6.3
@@ -103,6 +104,7 @@ pyrsistent==0.19.2
 pytest==7.2.1
 python-dateutil==2.8.2
 pytz==2022.5
+pytz-deprecation-shim==0.1.0.post0
 pytzdata==2020.1
 pyyaml==6.0
 pyzstd==0.15.4
@@ -136,6 +138,8 @@ tqdm==4.64.1
 traitlets==5.4.0
 transformers==4.26.0
 typing-extensions==4.3.0
+tzdata==2022.7
+tzlocal==4.2
 urllib3==1.26.12
 virtualenv==20.16.5
 watchdog==2.1.9
