--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ absl-py==1.2.0
 aiohttp==3.8.3
 aiosignal==1.2.0
 aniso8601==9.0.1
+apscheduler==3.10.0
 astunparse==1.6.3
 async-timeout==4.0.2
 attrs==22.2.0
@@ -66,6 +67,7 @@ pyparsing==3.0.9
 pyrsistent==0.19.2
 python-dateutil==2.8.2
 pytz==2022.5
+pytz-deprecation-shim==0.1.0.post0
 pytzdata==2020.1
 pyyaml==6.0
 pyzstd==0.15.4
@@ -95,6 +97,8 @@ torchvision==0.14.1
 tqdm==4.64.1
 transformers==4.26.0
 typing-extensions==4.3.0
+tzdata==2022.7
+tzlocal==4.2
 urllib3==1.26.12
 watchdog==2.1.9
 watchdog-gevent==0.1.1
